--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
