--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@reduxjs/toolkit": "^2.8.2",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.3.5",
     "postcss": "^8.5.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0"
   },
