--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3050",
     "build": "next build",
     "start": "next start --port 3050",
     "lint": "next lint"
@@ -12,7 +12,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.525.0",
-    "next": "^15.3.5",
+    "next": "^15.5.4",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
